# rust-api-template

./: Cargo.toml  README.md
src/: auth.rs  helpers.rs  identity.rs  main.rs  primitives.rs  requests_interfaces.rs  server.rs  users.rs
