[package]
name = "api-template"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.19", features = [] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8.3.0"
serde_json = "1.0.103"
dotenv = "0.15.0"
mongodb = "2.6.0"
regex = "1.9.1"
tower = "0.4.13"
axum-extra = "0.7.5"
bcrypt = "0.15.0"
redis = "0.23.0"
tower-http = { version = "0.4.3", features = ["full"] }
